--- a/.github/workflows/zerotier-planet-builder.yml
+++ b/.github/workflows/zerotier-planet-builder.yml
@@ -45,7 +45,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./
-          file: ./docker/zerotier-controller/Dockerfile
+          file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
