--- a/.github/workflows/headscale-webui-builder.yml
+++ b/.github/workflows/headscale-webui-builder.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -20,8 +21,8 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Prepare zerotier-planet-builder
-        id: prep_zerotier-planet-builder
+      - name: Prepare headscale-webui
+        id: prep_headscale-webui
         run: |
           DOCKER_IMAGE=${{ secrets.DOCKER_HUB_USERNAME }}/headscale-webui
           VERSION=latest
